# AI-segmentation

./: .gitignore  README.md  app.py  pyproject.toml
data/: data_profile_summary.txt  leadscored.db  leadscored_clean.csv  segment_descriptions.json
marketing_analytics_team/: __init__.py  state.py  teams.py
marketing_analytics_team/agents/: __init__.py  dataviz_agent.py  email_writer.py  product_expert.py  segmentation_agent.py  sql_agent.py  supervisor.py
scripts/: create_segments.py  data_cleaning.py
